Change pipeline to only get the cf-*.pivotal for elastic-runtime instead of including small footprint

--- a/download-offline-resources/pipeline.yml
+++ b/download-offline-resources/pipeline.yml
@@ -133,7 +133,7 @@ jobs:
   - get: elastic-runtime-pivnet
     trigger: true
     params:
-      globs: ["*.pivotal"]
+      globs: ["cf-*.pivotal"]
   - task: create-tarball
     config:
       platform: linux
