--- a/download-offline-resources/params.yml
+++ b/download-offline-resources/params.yml
@@ -1,6 +1,7 @@
 pivnet_token:
 opsman_major_minor_version:
 ert_major_minor_version:
+ipsec_major_minor_version:
 s3_access_key_id:
 s3_secret_access_key:
 s3_endpoint:
